--- a/Ansible/ansible_collections/jfrog/installers/roles/xray/tasks/Debian.yml
+++ b/Ansible/ansible_collections/jfrog/installers/roles/xray/tasks/Debian.yml
@@ -27,10 +27,17 @@
     name: libwxbase3.0-0v5
     update_cache: yes
     state: present
-  ignore_errors: yes
+  when
   become: yes
 
-- name: Install erlang
+- name: Install erlang 21.2.1-1
   apt:
     deb: "{{ xray_home }}/app/third-party/rabbitmq/esl-erlang_21.2.1-1~ubuntu~xenial_amd64.deb"
+  when: {{ xray_version is version('3.8.0','<') }}
+  become: yes
+
+- name: Install erlang 22.3.4.1-1
+  apt:
+    deb: "{{ xray_home }}/app/third-party/rabbitmq/esl-erlang_22.3.4.1-1_ubuntu_xenial_amd64.deb"
+  when: {{ xray_version is version('3.8.0','>=') }}
   become: yes
