--- a/Ansible/ansible_collections/jfrog/installers/roles/artifactory_nginx/tasks/main.yml
+++ b/Ansible/ansible_collections/jfrog/installers/roles/artifactory_nginx/tasks/main.yml
@@ -1,16 +1,27 @@
 ---
-- name: perform dependency installation
-  include_tasks: "{{ ansible_os_family }}.yml"
-
-- name: install nginx
-  package:
-    name: nginx
-    state: present
-  register: package_res
-  retries: 5
-  delay: 60
-  become: yes
-  until: package_res is success
+- name: Nginx Install Block
+  block:
+    - name: install nginx
+      package:
+        name: nginx
+        state: present
+      register: package_res
+      retries: 5
+      delay: 60
+      become: yes
+      until: package_res is success
+  rescue:
+    - name: perform dependency installation
+      include_tasks: "{{ ansible_os_family }}.yml"
+    - name: install nginx
+      package:
+        name: nginx
+        state: present
+      register: package_res
+      retries: 5
+      delay: 60
+      become: yes
+      until: package_res is success
 
 - name: configure main nginx conf file.
   copy:
