Openshift Artifactory Operator v1.1.0

--- a/Openshift4/artifactory-ha-operator/bundle/openshiftartifactoryha-operator.package.yaml
+++ b/Openshift4/artifactory-ha-operator/bundle/openshiftartifactoryha-operator.package.yaml
@@ -1,4 +1,5 @@
-packageName: openshiftartifactoryha-operator
 channels:
-  - name: alpha
-    currentCSV: artifactory-ha-operator.v1.0.3
+- currentCSV: artifactory-ha-operator.v1.1.1
+  name: alpha
+defaultChannel: ''
+packageName: openshiftartifactoryha-operator
