--- a/Openshift4/artifactory-ha-operator/deploy/crds/charts.helm.k8s.io_v1alpha1_openshiftartifactoryha_cr.yaml
+++ b/Openshift4/artifactory-ha-operator/deploy/crds/charts.helm.k8s.io_v1alpha1_openshiftartifactoryha_cr.yaml
@@ -4,47 +4,47 @@ metadata:
   name: openshiftartifactoryha
 spec:
   artifactory-ha:
+    database:
+      type: "OVERRIDE"
+      driver: "OVERRIDE"
+      url: "OVERRIDE"
+      user: "OVERRIDE"
+      password: "OVERRIDE"
+    initContainerImage: registry.connect.redhat.com/jfrog/init:1.0.1
+    waitForDatabase: true
+    installerInfo: '{ "productId": "Openshift_artifactory-ha/{{ .Chart.Version }}", "features": [ { "featureId": "ArtifactoryVersion/{{ default .Chart.AppVersion .Values.artifactory.image.version }}" }, { "featureId": "{{ if .Values.postgresql.enabled }}postgresql{{ else }}{{ .Values.database.type }}{{ end }}/0.0.0" }, { "featureId": "Platform/Openshift" }, { "featureId": "Partner/ACC-006983" }, { "featureId": "Channel/Openshift" } ] }'
     artifactory:
-      customInitContainersBegin: |
-        - name: "redhat-custom-setup"
-          image: {{ index .Values "initContainerImage" }}
-          imagePullPolicy: "{{ .Values.artifactory.image.pullPolicy }}"
-          command:
-            - 'sh'
-            - '-c'
-            - 'chown -R 1030:1030 {{ .Values.artifactory.persistence.mountPath }}'
-          securityContext:
-              runAsUser: 0
-          volumeMounts:
-            - mountPath: "{{ .Values.artifactory.persistence.mountPath }}"
-              name: volume
+      uid: "1000721030"
+      ## Change to use RH UBI images
       image:
-        repository: registry.connect.redhat.com/jfrog/artifactory-pro
-        version: 7.6.1
-      joinKey: EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE
-      masterKey: FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+        registry: registry.connect.redhat.com
+        repository: jfrog/artifactory-pro
+        tag: 7.9.0
       node:
         replicaCount: 2
         waitForPrimaryStartup:
           enabled: false
-    database:
-      driver: OVERRIDE
-      password: OVERRIDE
-      type: OVERRIDE
-      url: OVERRIDE
-      user: OVERRIDE
-    initContainerImage: registry.redhat.io/ubi8-minimal
-    installerInfo: '{ "productId": "Openshift_artifactory-ha/{{ .Chart.Version }}", "features": [ { "featureId": "ArtifactoryVersion/{{ default .Chart.AppVersion .Values.artifactory.image.version }}" }, { "featureId": "{{ if .Values.postgresql.enabled }}postgresql{{ else }}{{ .Values.database.type }}{{ end }}/0.0.0" }, { "featureId": "Platform/Openshift" }, { "featureId": "Partner/ACC-006983" }, { "featureId": "Channel/Openshift" } ] }'
+      masterKey: "OVERRIDE"
+      joinKey: "OVERRIDE"
+    postgresql:
+      enabled: false
     nginx:
+      uid: "1000720104"
+      gid: "1000720107"
+      image:
+        registry: registry.redhat.io
+        repository: rhel8/nginx-116
+        tag: latest
+      ## K8S secret name for the TLS secret to be used for SSL
+      tlsSecretName: "OVERRIDE"
+      service:
+        ssloffload: false
       http:
         externalPort: 80
         internalPort: 8080
       https:
         externalPort: 443
         internalPort: 8443
-      image:
-        repository: registry.redhat.io/rhel8/nginx-116
-        version: latest
       mainConf: |
         # Main Nginx configuration file
         worker_processes  4;
@@ -95,10 +95,3 @@ spec:
           #gzip  on;
           include {{ .Values.nginx.persistence.mountPath }}/conf.d/*.conf;
         }
-      tlsSecretName: OVERRIDE
-      service:
-        ssloffload: false
-    postgresql:
-      enabled: false
-    waitForDatabase: false
-  
