Fixing changelog versions to be based off the operator version

--- a/Openshift4/operator/artifactory-ha-operator/helm-charts/openshift-artifactory-ha/requirements.yaml
+++ b/Openshift4/operator/artifactory-ha-operator/helm-charts/openshift-artifactory-ha/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
-  - name: xray
-    version: 6.0.6
+  - name: artifactory-ha
+    version: 4.1.0
     repository: https://charts.jfrog.io/
