--- a/Openshift4/operator/xray-operator/helm-charts/openshift-xray/Chart.yaml
+++ b/Openshift4/operator/xray-operator/helm-charts/openshift-xray/Chart.yaml
@@ -1,7 +1,9 @@
 apiVersion: v1
-appVersion: 3.8.0
-description: Universal component scan for security and license inventory and impact
-  analysis
+appVersion: 3.8.8
+description: Universal component scan for security and license inventory and impact analysis
+sources:
+- https://bintray.com/jfrog/product/xray/view
+- https://github.com/jfrog/charts
 keywords:
 - xray
 - jfrog
@@ -11,7 +13,4 @@ maintainers:
 - email: johnp@jfrog.com
   name: John Peterson
 name: openshift-xray
-sources:
-- https://bintray.com/jfrog/product/xray/view
-- https://github.com/jfrog/charts
-version: 4.2.0
+version: 6.0.6
