--- a/Openshift4/operator/artifactory-ha-operator/config/manager/manager.yaml
+++ b/Openshift4/operator/artifactory-ha-operator/config/manager/manager.yaml
@@ -1,38 +1,34 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  labels:
-    control-plane: controller-manager
-  name: system
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: controller-manager
-  namespace: system
-  labels:
-    control-plane: controller-manager
+  name: artifactory-ha-operator
 spec:
+  replicas: 1
   selector:
     matchLabels:
-      control-plane: controller-manager
-  replicas: 1
+      name: artifactory-ha-operator
   template:
     metadata:
       labels:
-        control-plane: controller-manager
+        name: artifactory-ha-operator
     spec:
+      serviceAccountName: artifactory-ha-operator
       containers:
-      - image: controller:latest
-        args:
-        - "--enable-leader-election"
-        - "--leader-election-id=artifactory-ha-operator"
-        name: manager
-        resources:
-          limits:
-            cpu: 100m
-            memory: 90Mi
-          requests:
-            cpu: 100m
-            memory: 60Mi
-      terminationGracePeriodSeconds: 10
+        - name: artifactory-ha-operator
+          image: registry.connect.redhat.com/jfrog/artifactory-operator
+          imagePullPolicy: Always
+          env:
+            - name: WATCH_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: OPERATOR_NAME
+              value: "artifactory-ha-operator"
+            - name: RELATED_IMAGE_ARTIFACTORY_IMAGE_REPOSITORY
+              value: "registry.connect.redhat.com/jfrog/artifactory-pro"
+            - name: RELATED_IMAGE_NGINX_IMAGE_REPOSITORY
+              value: "registry.redhat.io/rhel8/nginx-116"
