--- a/Openshift4/operator/artifactory-ha-operator/config/rbac/role_binding.yaml
+++ b/Openshift4/operator/artifactory-ha-operator/config/rbac/role_binding.yaml
@@ -1,12 +1,11 @@
+kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
 metadata:
-  name: manager-rolebinding
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: manager-role
+  name: artifactory-ha-operator
 subjects:
 - kind: ServiceAccount
-  name: default
-  namespace: system
+  name: artifactory-ha-operator
+roleRef:
+  kind: Role
+  name: artifactory-ha-operator
+  apiGroup: rbac.authorization.k8s.io
