--- a/Openshift4/operator/artifactory-ha-operator/bundle/1.1.1/openshiftartifactoryhas.charts.helm.k8s.io.crd.yaml
+++ b/Openshift4/operator/artifactory-ha-operator/bundle/1.1.1/openshiftartifactoryhas.charts.helm.k8s.io.crd.yaml
@@ -1,6 +1,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
+  creationTimestamp: null
   name: openshiftartifactoryhas.charts.helm.k8s.io
 spec:
   group: charts.helm.k8s.io
@@ -15,9 +16,14 @@ spec:
   validation:
     openAPIV3Schema:
       type: object
-      x-kubernetes-preserve-unknown-fields: true
   version: v1alpha1
   versions:
   - name: v1alpha1
     served: true
     storage: true
+status:
+  acceptedNames:
+    kind: ''
+    plural: ''
+  conditions: null
+  storedVersions: null
