--- a/Openshift4/operator/pipeline-operator/watches.yaml
+++ b/Openshift4/operator/pipeline-operator/watches.yaml
@@ -1,5 +1,5 @@
 # Use the 'create api' subcommand to add watches to this file.
-- group: charts.my.domain
+- group: charts.helm.k8s.io
   version: v1alpha1
   kind: OpenshiftPipelines
   chart: helm-charts/openshift-pipelines
