--- a/Openshift4/helm/openshift-pipelines/values.yaml
+++ b/Openshift4/helm/openshift-pipelines/values.yaml
@@ -122,7 +122,7 @@ pipelines:
 
       service:
         ## Supported service types: ClusterIP, NodePort and LoadBalancer
-        type: ClusterIP
+        type: LoadBalancer
         port: 30000
 
         annotations:
@@ -205,7 +205,7 @@ pipelines:
 
       service:
         ## Supported service types: ClusterIP, NodePort and LoadBalancer
-        type: ClusterIP
+        type: LoadBalancer
         port: 30001
 
         annotations:
@@ -957,7 +957,7 @@ pipelines:
       extraPlugins: ""
 
     service:
-      type: ClusterIP
+      type: LoadBalancer
       annotations: {}
 
     persistence:
