--- a/Openshift4/operator/pipeline-operator/watches.yaml
+++ b/Openshift4/operator/pipeline-operator/watches.yaml
@@ -1,6 +1,6 @@
 ---
 - version: v1alpha1
   group: charts.helm.k8s.io
-  kind: OpenshiftPipelines
+  kind: OpenshiftPipeline
   chart: helm-charts/openshift-pipelines
 # +kubebuilder:scaffold:watch
